[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Scenes/Connection/CreateServer/CreateServer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Util/SceneSwitch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Scenes/Connection/CreateServer/AssetPath.gd" type="Script" id=3]

[node name="CreateServer" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -75.0
margin_right = 191.0
margin_bottom = 75.0
script = ExtResource( 1 )

[node name="Create" type="Button" parent="."]
margin_left = 239.0
margin_top = 115.0
margin_right = 360.0
margin_bottom = 135.0
focus_next = NodePath("../AssetPath")
focus_previous = NodePath("../Cancel")
text = "Create server"

[node name="Cancel" parent="." instance=ExtResource( 2 )]
margin_left = 19.0
margin_top = 115.0
margin_right = 137.0
margin_bottom = 135.0
focus_next = NodePath("../Create")
focus_previous = NodePath("../Port")
text = "Cancel"
target = "res://Scenes/Connection/MainMenu.tscn"

[node name="ServerPass" type="LineEdit" parent="."]
editor/display_folded = true
margin_left = 109.0
margin_top = 45.0
margin_right = 369.0
margin_bottom = 69.0
focus_next = NodePath("../MaxPlayers")
focus_previous = NodePath("../AssetPath")

[node name="Label" type="Label" parent="ServerPass"]
margin_left = -100.0
margin_right = -12.0
margin_bottom = 24.0
text = "Password:"
valign = 1

[node name="MaxPlayers" type="LineEdit" parent="."]
editor/display_folded = true
margin_left = 109.0
margin_top = 75.0
margin_right = 191.0
margin_bottom = 99.0
focus_next = NodePath("../Port")
focus_previous = NodePath("../ServerPass")

[node name="Label" type="Label" parent="MaxPlayers"]
margin_left = -100.0
margin_right = -12.0
margin_bottom = 24.0
text = "Max. Players:"
valign = 1

[node name="Port" type="LineEdit" parent="."]
editor/display_folded = true
margin_left = 271.0
margin_top = 75.0
margin_right = 364.0
margin_bottom = 99.0
focus_next = NodePath("../Cancel")
focus_previous = NodePath("../MaxPlayers")

[node name="Label" type="Label" parent="Port"]
margin_left = -40.0
margin_right = -3.0
margin_bottom = 24.0
text = "Port:"
valign = 1

[node name="AssetPath" type="Button" parent="."]
editor/display_folded = true
margin_left = 109.0
margin_top = 13.0
margin_right = 369.0
margin_bottom = 33.0
focus_next = NodePath("../ServerPass")
focus_previous = NodePath("../Create")
script = ExtResource( 3 )

[node name="Label" type="Label" parent="AssetPath"]
margin_left = -100.0
margin_right = -12.0
margin_bottom = 20.0
text = "Assets folder:"
valign = 1

[node name="dialog" type="FileDialog" parent="AssetPath"]
margin_left = -190.0
margin_top = -160.0
margin_right = 360.0
margin_bottom = 240.0
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "D:/Gitlab/open-multiplayer-vn-0.2"
current_path = "D:/Gitlab/open-multiplayer-vn-0.2/"
